5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1712_2506.log
== SUBMITION (2019-05-15 13:45:17) 
-- CODE:
am = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

ano = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.133789
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2506/main.py", line 6, in <module>
    while (tam > 0 and tam < 1200):
NameError: name 'tam' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:45:20) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

ano = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.133622
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2506/main.py", line 14, in <module>
    print(anos)
NameError: name 'anos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:45:23) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

ano = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.135859
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2506/main.py", line 14, in <module>
    print(anos)
NameError: name 'anos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:45:23) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

ano = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.125945
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2506/main.py", line 14, in <module>
    print(anos)
NameError: name 'anos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:45:23) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

ano = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.133354
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2506/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:45:23) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

ano = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.271827
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2506/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:45:31) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

anos = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.200764
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
3
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:45:33) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

anos = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.134343
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
3
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:45:33) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

anos = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.111004
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2506/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:45:33) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

anos = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.198056
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
0
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:45:34) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

anos = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.159997
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:

-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:45:34) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

anos = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.204509
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
0
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:45:34) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

anos = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- ERROR:
File "XXXX", line 12
    print("ZERO"):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:46:02) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

anos = 0

while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.18169
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
3
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:56:07) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

anos = 0

while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- ERROR:
File "XXXX", line 12
    print("ZERO"):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:56:26) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

anos = 0

while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.17285
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
3
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:58:30) 
-- CODE:
tam = float(input("Quant. de peixes: "))
P_cres = float(input("Percentual de cres: "))
q = int(input("Quant. para vendas: "))
 
anos = 0

while( tam > 0 and tam < 12000):
	y = tam * P_cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.20758
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
